<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomeActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_main_fragment"
        android:layout_above="@+id/bnlv_linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.gauravk.bubblenavigation.BubbleNavigationLinearView
        android:id="@+id/bnlv_linear"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:elevation="@dimen/default_dp_8"
        android:orientation="horizontal"
        android:padding="@dimen/default_dp_12">

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/btv_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:bt_active="true"
            app:bt_colorActive="@color/red_active"
            app:bt_colorInactive="@color/red_inactive"
            app:bt_icon="@drawable/ic_weather"
            app:bt_shape="@drawable/transition_background_drawable_weather"
            app:bt_title="@string/weather" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/btv_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:bt_badgeBackgroundColor="@color/green_active"
            app:bt_colorActive="@color/blue_active"
            app:bt_colorInactive="@color/blue_inactive"
            app:bt_icon="@drawable/ic_news"
            app:bt_shape="@drawable/transition_background_drawable_news"
            app:bt_title="@string/news" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/btv_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:bt_colorActive="@color/green_active"
            app:bt_colorInactive="@color/green_inactive"
            app:bt_icon="@drawable/ic_image"
            app:bt_shape="@drawable/transition_background_drawable_video"
            app:bt_title="@string/video" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/btv_my_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:bt_colorActive="@color/purple_active"
            app:bt_colorInactive="@color/purple_inactive"
            app:bt_icon="@drawable/ic_person"
            app:bt_shape="@drawable/transition_background_drawable_person"
            app:bt_title="@string/my_account" />
    </com.gauravk.bubblenavigation.BubbleNavigationLinearView>

</RelativeLayout>